fix(demo,toolbar): remove whitespace on shrink
Fixes issue -> https://github.com/angular/material/issues/449

--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -49,6 +49,18 @@ md-toolbar {
   .md-indent {
     margin-left: $toolbar-indent-margin;
   }
+
+  ~ md-content {
+    > md-list {
+      padding: 0;
+
+      md-list-item:last-child {
+        md-divider {
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 .md-toolbar-tools {
